# xsolarbridge2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  xsolarbridge.properties
include/: CMospp.h  CMqttBridge.h
src/: CMospp.cpp  CMqttBridge.cpp  main.cpp
